assets/style.css
body {
 width:100%;
 margin: 0;
 padding: 0;

}
/* FONTS */
@font-face {
   font-family: avenirBook;
   src: url(../assets/fonts/avenirbook.ttf);
}
@font-face {
   font-family: avenirMedium;
   src: url(../assets/fonts/avenirMedium.ttf);
}
@font-face {
   font-family: avenirHeavy;
   src: url(../assets/fonts/avenir-heavy-new.otf);
}

/*NAV BAR*/
nav {
  width: 100% !important;
}
.navbar {
  position: fixed;
  top: 0; /* Position the navbar at the top of the page */
  width: inherit;
}
.navbar-nav {
  width: 100% !important;
  background-color: white;
  height: 80px;
}
.navbar-nav .nav-item {
line-height: 80px;
}
.nav-item {
 color: #283C52 ;
 font-size: 18px;
 font-family: avenirHeavy;
}
.nav-item a:hover {
 color: #EA4750 ;
 text-decoration: none;
}

.navbar-btn {
 border-radius: 3;
 background-color: #283C52 ;
 border-color: #283C52 ;
 line-height: 30px;
 padding: 5px 20px 5px 20px;
 text-align: center;
}
.container-fluid{
  padding: 0;
  margin:0;
}

/*LEARN CONTAINER*/
.row {
  margin:0;
  padding:0;
}
.learn-container{
  padding-top: 100px;
  height: 500px;
  background-color: #F6F6F6;
  font-size: 25px;
  font-family: avenirBook;
  width: 100%;
}

.learn-header {
 font-size: 25px;
 font-family: avenirHeavy;
 margin: 0 auto;
}
.learn-caption {
 font-size: 18px;
}
.learn-more-btn {
 background-color: #283C52 ;
 border-color: #283C52;
}
.form-row {
  padding: 5px;
}
.glyphicon-ok {
  color: #EA4750;
  float: left;
}
.submission-received {
  visibility: hidden;
  font-size: 18px;
}

.submission-text {
  text-align: center;
  font-size: 16px;
  border-bottom: 2px solid #EA4750;
}

/*ABOUT CONTAINER*/
.about-header {
  font-size: 25px;
  font-family: avenirHeavy;
  margin: 0 auto;
  /*padding-left: 30px;*/
  font-weight: bold;
}
.about-container {
  color: #283C52;
  width: 100%;
  height: 500px;
  background-color: white;
}

.left-text {
  transform: translate(170px, 60px);
  font-weight: normal;
  font-family: avenirHeavy;
  border-right: solid 2px #EA4750;
    height: 125px;
    padding-top: 20px;
}

.blog-group {
  font-family: avenirBook;
  font-size: 18px;

}
.email-link {
  font-size: 18px;
  font-family: avenirHeavy;
  color: #283C52;
}

.blog-btn {
  font-family: avenirHeavy;
  color: #283C52;
}

.about-us-footer {
  display: flex;
}

.btn-secondary {
  font-family: avenirHeavy;
  color: #283C52;
  width: 120px;
  background-color: white;
  border: #283C52 1px solid;
}

.btn-secondary:hover {
  background-color: #283C52;
  color: white;
}

.email-text {
  width: 60%;
}

.footer-item {
  height: 50px;

}

.inline-block {
  display: inline;
}

/*PROCESS CONTAINER*/
.left-header {
  font-size: 25px;
  font-family: avenirHeavy;
  margin: 0 auto;
  padding-left: 30px;
  font-weight: bold;
  transform: translateX(-80px);
}

#left-text-college {
  transform: translate(52px, 60px);
  font-weight: normal;
  font-family: avenirHeavy;
  /*padding: 2em;*/
}

.vertical-line-process {
  width: 2px;
  background-color:#EA4750;
  float: right;
  height: 100%;
  transform: translate(-20px, -55px);
}

.process-content {
  text-align: right;
  font-size: 18px;
}

.process-section {
  flex: 1;
}

.category {
  font-family: avenirMedium;
  font-size: 18px;
  background: none;
  display: inline-block;
  flex: 1;
}


input[type=radio] {
  display: none;
}

input[type=radio] + label {
  background-image: url("../assets/images/plus-circle.png");
  background-repeat: no-repeat !important;
  background-position: right;
  padding-right: 30px;
}

input[type=radio]:hover + label {
  background-image: url("../assets/images/plus-circle-pinkred.png")
}

input[type=radio]:checked + label {
  background-image: url("../assets/images/check-circle.png")
}

.box-description {
  font-family: avenirHeavy;
  font-size: 14px;
}

.take-title {
  font-family: avenirHeavy;
  color: #EA4750;
}

#college-selection-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    flex: 1;
}

.triangle-left-selection {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(-3px);
}

.process-container {
  height: 500px;
  width: 100%;
}

#essays-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    display: none;
    flex: 1;
}

.triangle-left-essays {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(50px);
    display: none;
}

#recommendations-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    display: none;
    flex: 1;
}

.triangle-left-recommendations {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(109px);
    display: none;
}

#interviews-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    display: none;
    flex: 1;
}

.triangle-left-interviews {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(167px);
    display: none;
}

#academics-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    display: none;
    flex: 1;
}

.triangle-left-academics {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(223px);
    display: none;
}

#extracurriculars-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    display: none;
    flex: 1;
}

.triangle-left-extracurriculars {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(275px);
    display: none;
}

#financial-aid-box {
    background-color: #F6F6F6;
    height: 400px;
    width: 333px;
    float:left;
    padding: 7px;
    border-style: solid #F6F6F6;
    border-top-color: #F6F6F6;
    font-family: avenirHeavy;
    transform: translate(18px, -55px);
    display: none;
    flex: 1;
}

.triangle-left-financial-aid {
    width: 0;
    height: 0;
    border-top: 18px solid transparent;
    border-right: 18px solid #F6F6F6;
    border-bottom: 18px solid transparent;
    float:left;
    transform: translateY(330px);
    display: none;
}

.learn-caption {
  font-size: 18px;
}
.learn-more-btn {
  background-color: #283C52;
}
.learn-more-btn:hover {
  background-color: #EA4750;
  border-color: #EA4750;
}
.input-field {
  line-height: 40px;
  height:50px;
}

/*APPROACH CONTAINER*/
.container {
  height: 500px;
}
.approach-container {
  background-color: #283C52;
  width: 100%;
  height: 500px;
  color: white;
  width:100%;
}

.container-row{
  padding: 60px;
  width: 100%;
}
.approach-header{
  font-size: 25px;
  font-family: avenirHeavy;
  margin: 0 auto;
  /*padding-left: 30px;*/
  font-weight: bold;
}

.approach-info-title {
  padding-bottom: 12px;
}
.approach-info-header{
  font-size: 18px;
  font-family: avenirMedium;
  padding-left: 5px;
}
.approach-info-caption{
  font-size: 18px;
  font-family: avenirBook;
  transform: translateX(30px);
}

.approach-info-header{
  color: #EA4750;
}
.approach-quad {
  padding:40px;
}
.approach-icons{
  transform: translateY(-20px);
}

/*FOOTER STYLING*/
footer {
  display: inline-block;
  background-color: #F6F6F6;
  width:100%;
  height: 40px;
  /*bottom: -60px;
    position: absolute;*/
  padding-bottom:0;
  margin-bottom: 0;
}
.footer-container {
  /*height: 40px;*/
  /*display: inline-block;*/
  position: absolute;
  width: 100%;
  height: 60px;
  /*display: flex;
  justify-content: flex-end;*/
  /*padding-bottom:0;
  margin-bottom: 0;*/
}
.footer-copyright {
  float:left;
  padding: 10px;
  font-family: avenirMedium;
  font-size: 18px;
}
.footer-icon-group {
  float: right;
  padding: 10px;
}
footer img{
  padding: 0 10px;
  margin: 0 auto;
}
.fb-logo {
  background: url('../assets/images/facebookpink.png');
  background-repeat: no-repeat !important;
  background-position: 10px 0px;

}
.fb-logo img:hover {
  opacity: 0;
}

.twitter-logo {
  background: url('../assets/images/twitter-pinkred.png');
  background-repeat: no-repeat !important;
  background-position: 10px 0px;
}
.twitter-logo img:hover {
  opacity: 0;
}

.instagram-logo {
  background: url('../assets/images/instagram-pinkred.png');
  background-repeat: no-repeat !important;
  background-position: 10px -1px;
}
.instagram-logo img:hover {
  opacity: 0;
}

.mail-logo {
  background-image: url('../assets/images/mail-pinkred.png');
  background-repeat: no-repeat !important;
  background-position: 10px 0px;
}
.mail-logo img:hover {
  opacity: 0;
}

footer li {
  display: inline-block;
}

